# Portafolio-Manager

./: .env.example  .flake8  .gitattributes  .gitignore  AUTOMATED_DEPLOYMENT.md  BADGES.md  CI_CD_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  SETUP.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: README.md  WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  pr-checks.yml  release.yml  security.yml  validate.yml
config/: urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  staging.py  test.py
deploy/: nginx.conf  watchtower-docker-compose.yml
docs/: ADMIN_USAGE.md  CLEANUP_SUMMARY.md  CONFIGURATION_GUIDE.md  CONTEXT_VARIABLES.md  DEPLOYMENT.md  DOCKER_COMMANDS.md  DOCUMENTATION_INDEX.md  EMAIL_SETUP.md  FAVICON_IMPLEMENTATION.md  MANAGEMENT_COMMANDS.md  RELEASE_WORKFLOW.md  SETUP.md  TEST_DATA.md
portfolio/: admin.py  apps.py  auth_views.py  context_processors.py  decorators.py  email_service.py  file_handlers.py  forms.py  i18n_compiler.py  image_utils.py  language_urls.py  language_views.py  middleware.py  models.py  query_optimizations.py  security_middleware.py  seo_utils.py  signals.py  sitemaps.py  tests.py  translation.py  urls.py  utils.py  validators.py  views.py
portfolio/admin/: __init__.py  blog.py  config.py  projects.py  users.py
portfolio/forms/: __init__.py  base.py  blog.py  config.py  contact.py  profile.py  projects.py
portfolio/management/: __init__.py
portfolio/middleware/: __init__.py  base.py  security.py
portfolio/migrations/: 0001_initial.py  0002_alter_technology_color_alter_technology_icon.py  0003_project_emoji_project_forks_count_and_more.py  0004_blogpost_github_url_blogpost_linkedin_url_and_more.py  0005_project_featured_link_custom_and_more.py  0006_category_alter_blogpost_featured_image_and_more.py  0007_alter_skill_category.py  0008_remove_category_color_remove_category_icon.py  0009_profile_medium_url.py  0010_projecttype_alter_project_project_type_and_more.py  0011_remove_emoji_field.py  0012_remove_blogpost_post_type.py  0013_add_resume_pdf_es.py  0014_add_language_model.py  0015_siteconfiguration.py  0016_alter_siteconfiguration_options_alter_profile_bio_and_more.py  0017_remove_profile_bio_remove_profile_location_and_more.py  0018_project_translations.py  0019_alter_profile_managers_alter_project_managers_and_more.py  0020_remove_blogpost_content_remove_blogpost_excerpt_and_more.py  0021_translate_experience_education_skill_category.py  0022_alter_blogpost_managers_alter_category_managers_and_more.py  0023_translate_multilingual_models.py  0024_cleanup_legacy_columns.py  0025_auto_translation_service.py  0026_alter_siteconfiguration_translation_api_key_and_more.py  0027_alter_siteconfiguration_translation_api_url.py  0028_alter_profile_email_and_more.py  0029_cleanup_category_table.py  0030_rename_technology_knowledgebase_and_more.py  0031_create_default_knowledge_bases.py  0032_create_default_categories.py  0033_create_default_project_types.py  0034_fix_language_table.py  0035_remove_duplicates.py  0036_auto_20251208_2311.py  0037_alter_blogpost_slug.py  0038_alter_siteconfiguration_translation_timeout.py
portfolio/services/: translation_service.py
portfolio/templatetags/: __init__.py  markdown_extras.py  simple_i18n.py
portfolio/tests/: test_auto_translation.py  test_contact_spam.py  test_forms.py  test_models.py  test_validators.py  test_views_public.py
portfolio/utils/: __init__.py  analytics.py  decorators.py  email.py  images.py  resume.py  validators.py
portfolio/views/: __init__.py  auth.py  base.py  blog.py  dashboard.py  general.py  projects.py  resume.py
requirements/: base.txt  development.txt  production.txt  staging.txt
static/css/: .gitkeep
static/images/: .gitkeep
static/js/: .gitkeep  lazy-loading.js  (+1 more)
templates/: 403.html  404.html  500.html  base.html
(+80 files in other folders)
